[gd_scene load_steps=5 format=3 uid="uid://bbtrnyw8tn6iw"]

[ext_resource type="Script" uid="uid://dyg3fylls8moe" path="res://Circle_Color/circle_color.gd" id="1_riyhh"]
[ext_resource type="Texture2D" uid="uid://dpdg8ujlmsy8b" path="res://Assets/parts/color-ball.png" id="2_iam33"]
[ext_resource type="AudioStream" uid="uid://c8r3ddwqqr2ma" path="res://Sounds/Effects/circle_color.ogg" id="3_8sr37"]

[sub_resource type="CircleShape2D" id="CircleShape2D_riyhh"]
radius = 13.0384

[node name="CircleColor" type="Area2D"]
script = ExtResource("1_riyhh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-9.09495e-13, 2.38419e-07)
texture = ExtResource("2_iam33")

[node name="CircleCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_riyhh")

[node name="CircleColor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8sr37")
volume_db = 12.0

[connection signal="finished" from="CircleColor" to="." method="_on_circle_color_finished"]
